adapt package for Debian/Buster
- bump standards 4.2.1 -> 4.4.1
- install the Upstream Changelog as NEWS
- prepared a forward-port of the old 'pyside'
- naming convention for "orig" tarball: 2.3.14+libs
- thus git-buildpackage needs the tag
    upstream/2.3.14+libs

--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,8 @@ export QT_SELECT=4
 
 override_dh_auto_configure:
 	cp debian/config.pri .
+	cp CHANGELOG.md NEWS
+	cp README.md README
 	qmake-qt4 -r CONFIG+=stable PREFIX=/usr
 #	exit 1
 
